--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "node-appwrite": "^12.0.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
