--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "node-appwrite": "^12.0.1",
